key value list item component

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@
 // @import './scss/bootstrap/transitions';
 // @import './scss/bootstrap/dropdown';
 // @import './scss/bootstrap/button-group';
-// @import './scss/bootstrap/nav';
+@import './scss/bootstrap/nav';
 // @import './scss/bootstrap/navbar';
 @import './scss/bootstrap/card';
 // @import './scss/bootstrap/breadcrumb';
