--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -49,6 +49,8 @@
     color: $gray-600;
     display: flex;
     align-items: center;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
 
     svg {
       width: 24px;
