masternodes page + responsive table

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,7 @@
 // @import './scss/bootstrap/images';
 // @import './scss/bootstrap/containers';
 // @import './scss/bootstrap/grid';
-// @import './scss/bootstrap/tables';
+@import './scss/bootstrap/tables';
 @import './scss/bootstrap/forms';
 @import './scss/bootstrap/buttons';
 // @import './scss/bootstrap/transitions';
