--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -11,7 +11,7 @@
   background-color: $white;
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
+  flex: 0 0 224px;
   border-right: $border-width solid $border-color;
 }
 
