--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,9 +5,10 @@ body {
 #app {
   display: flex;
   height: 100vh;
+  width: 100vw;
 
   > main {
-    flex-grow: 1;
+    width: calc(100% - 224px);
 
     .main-wrapper {
       display: flex;
@@ -120,5 +121,19 @@ body {
     &.show-backdrop {
       display: block;
     }
+  }
+
+  [class^="txn-status-"] {
+    display: block;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+  }
+
+  .txn-status-confirmed {
+    background-color: $green;
   }
 }
