--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -342,7 +342,7 @@ $table-hover-bg:              rgba($black, .075);
 $table-active-bg:             $table-hover-bg;
 
 $table-border-width:          $border-width;
-$table-border-color:          $border-color;
+$table-border-color:          $gray-100;
 
 $table-head-bg:               $gray-200;
 $table-head-color:            $gray-700;
