--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -27,6 +27,17 @@ body {
       justify-content: space-between;
       flex-shrink: 0;
 
+      &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        z-index: -1;
+        -webkit-app-region: drag;
+      }
+
       > h1,
       > .nav,
       > .spacer {
