--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -16,11 +16,23 @@
 }
 
 .brand {
+  position: relative;
   height: 112px;
   border-bottom: $border-width solid $border-color;
   padding: 24px 20px;
   display: flex;
   flex-shrink: 0;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    -webkit-app-region: drag;
+  }
 
   img {
     align-self: flex-end;
