--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -68,6 +68,7 @@ body {
         position: absolute;
         left: 12px;
         top: 12px;
+        text-transform: none;
       }
       
       @include media-breakpoint-down(sm) {
