Wallet UI, countdown button

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,7 @@
 @import './scss/bootstrap/forms';
 @import './scss/bootstrap/buttons';
 // @import './scss/bootstrap/transitions';
-// @import './scss/bootstrap/dropdown';
+@import './scss/bootstrap/dropdown';
 // @import './scss/bootstrap/button-group';
 @import './scss/bootstrap/nav';
 // @import './scss/bootstrap/navbar';
