--- a/src/containers/WalletPage/PaymentRequests.module.scss
+++ b/src/containers/WalletPage/PaymentRequests.module.scss
@@ -22,7 +22,7 @@
 .icon {
   width: 24px;
   height: 24px;
-  color: $gray-600;
+  color: $secondary;
 }
 
 .time {
@@ -35,11 +35,11 @@
 }
 
 .unit {
-  color: $gray-600;
+  color: $secondary;
 }
 
 .actionCell {
   width: 24px;
   height: 24px;
-  color: $gray-600;
+  color: $secondary;
 }
