--- a/src/containers/WalletPage/WalletTxns.module.scss
+++ b/src/containers/WalletPage/WalletTxns.module.scss
@@ -21,7 +21,7 @@
 .typeIcon {
   width: 24px;
   height: 24px;
-  color: $gray-600;
+  color: $secondary;
 }
 
 .type,
@@ -40,5 +40,5 @@
 }
 
 .unit {
-  color: $gray-600;
+  color: $secondary;
 }
