--- a/src/containers/BlockchainPage/BlockTxn.module.scss
+++ b/src/containers/BlockchainPage/BlockTxn.module.scss
@@ -85,7 +85,7 @@
     width: 24px;
     height: 24px;
     vertical-align: top;
-    color: $gray-600;
+    color: $secondary;
   }
 }
 
@@ -100,6 +100,6 @@
 }
 
 .amount {
-  color: $gray-600;
+  color: $secondary;
 }
 
