--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,12 +9,13 @@ $dfi-green:   #02B31B;
 $dfi-orange:  #FF9629;
 $dfi-red:     #FF0000;
 $dfi-scent:   #F4F3F6;
-
+$dfi-umbra:   #08091F;
 
 $dfi-colors: (
   "dfi-purple":   $dfi-purple,
   "dfi-green":    $dfi-green,
   "dfi-orange":   $dfi-orange,
   "dfi-red":      $dfi-red,
-  "dfi-scent":    $dfi-scent
+  "dfi-scent":    $dfi-scent,
+  "dfi-umbra":    $dfi-umbra
 );
