--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -12,17 +12,17 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 224px;
-  border-right: $border-width solid $border-color;
   z-index: 2;
 }
 
 .brand {
   position: relative;
   height: 112px;
-  border-bottom: $border-width solid $border-color;
-  padding: 24px 20px;
+  // border-bottom: $border-width solid $border-color;
+  padding: 28px 32px;
   display: flex;
   flex-shrink: 0;
+  align-items: flex-end;
 
   &:before {
     content: "";
@@ -35,8 +35,8 @@
     -webkit-app-region: drag;
   }
 
-  img {
-    align-self: flex-end;
+  svg {
+    color: $primary;
   }
 }
 
