--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -159,7 +159,7 @@ $sizes: map-merge(
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $dfi-scent;
+$body-bg:                   $white;
 $body-color:                $black;
 
 
@@ -603,7 +603,7 @@ $custom-range-thumb-bg:                      $component-active-bg;
 $custom-range-thumb-border:                  0;
 $custom-range-thumb-border-radius:           1rem;
 $custom-range-thumb-box-shadow:              0 .1rem .25rem rgba($black, .1);
-$custom-range-thumb-focus-box-shadow:        0 0 0 1px $body-bg, $input-focus-box-shadow;
+$custom-range-thumb-focus-box-shadow:        0 0 0 1px $dfi-scent, $input-focus-box-shadow;
 $custom-range-thumb-focus-box-shadow-width:  $input-focus-width; // For focus box shadow issue in IE/Edge
 $custom-range-thumb-active-bg:               lighten($component-active-bg, 35%);
 $custom-range-thumb-disabled-bg:             $gray-500;
@@ -685,7 +685,7 @@ $nav-tabs-border-width:             $border-width;
 $nav-tabs-border-radius:            $border-radius;
 $nav-tabs-link-hover-border-color:  $gray-200 $gray-200 $nav-tabs-border-color;
 $nav-tabs-link-active-color:        $gray-700;
-$nav-tabs-link-active-bg:           $body-bg;
+$nav-tabs-link-active-bg:           $dfi-scent;
 $nav-tabs-link-active-border-color: $gray-300 $gray-300 $nav-tabs-link-active-bg;
 
 $nav-pills-border-radius:           $border-radius;
@@ -1017,7 +1017,7 @@ $list-group-action-active-bg:       $gray-200;
 // Image thumbnails
 
 $thumbnail-padding:                 .25rem;
-$thumbnail-bg:                      $body-bg;
+$thumbnail-bg:                      $dfi-scent;
 $thumbnail-border-width:            $border-width;
 $thumbnail-border-color:            $gray-300;
 $thumbnail-border-radius:           $border-radius;
