better balance alignment

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -19,7 +19,7 @@
   position: relative;
   height: 112px;
   border-bottom: $border-width solid $border-color;
-  padding: 28px 32px;
+  padding: 28px 24px 20px;
   display: flex;
   flex-shrink: 0;
   flex-wrap: wrap;
