import range slider css at a higher level

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,11 @@
 
 
 //
+// Unofficial bootstrap compoennts and mods
+//
+@import '~react-bootstrap-range-slider/dist/react-bootstrap-range-slider';
+
+//
 // APPLICATION-ONLY STYLES
 // This is where non-Bootstrap-related styles go
 
