change switch color

--- a/src/scss/bootstrap/_forms.scss
+++ b/src/scss/bootstrap/_forms.scss
@@ -111,7 +111,7 @@
     }
 
     &:checked {
-      background-color: $green;
+      background-color: $primary;
       box-shadow: none;
 
       &:before {
