setup neutrinojs with TS, script for running electron and web app in parallel and  Build with electron app

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,15 @@
 //
 
 // Google fonts IBM Plex Sans
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 
 //
 // Import app and Bootstrap dependencies
 //
-@import './scss/variables';
-@import '~bootstrap/scss/functions';
+@import "./scss/variables";
+@import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
-@import './scss/bootstrap/variables';
+@import "./scss/bootstrap/variables";
 @import "~bootstrap/scss/mixins";
 
 //
@@ -59,19 +59,19 @@
 
 // @import './scss/bootstrap/root';
 // @import './scss/bootstrap/reboot';
-@import './scss/bootstrap/type';
+@import "./scss/bootstrap/type";
 // @import './scss/bootstrap/images';
 // @import './scss/bootstrap/containers';
 // @import './scss/bootstrap/grid';
-@import './scss/bootstrap/tables';
-@import './scss/bootstrap/forms';
-@import './scss/bootstrap/buttons';
+@import "./scss/bootstrap/tables";
+@import "./scss/bootstrap/forms";
+@import "./scss/bootstrap/buttons";
 // @import './scss/bootstrap/transitions';
-@import './scss/bootstrap/dropdown';
+@import "./scss/bootstrap/dropdown";
 // @import './scss/bootstrap/button-group';
-@import './scss/bootstrap/nav';
+@import "./scss/bootstrap/nav";
 // @import './scss/bootstrap/navbar';
-@import './scss/bootstrap/card';
+@import "./scss/bootstrap/card";
 // @import './scss/bootstrap/breadcrumb';
 // @import './scss/bootstrap/pagination';
 // @import './scss/bootstrap/badge';
@@ -86,17 +86,16 @@
 // @import './scss/bootstrap/carousel';
 // @import './scss/bootstrap/spinners';
 
-
 //
 // Unofficial bootstrap compoennts and mods
 //
-@import '~react-bootstrap-range-slider/dist/react-bootstrap-range-slider';
+@import "~react-bootstrap-range-slider/dist/react-bootstrap-range-slider";
 
 //
 // APPLICATION-ONLY STYLES
 // This is where non-Bootstrap-related styles go
 
-@import './scss/type';
-@import './scss/layout';
-@import './scss/transitions';
-@import './scss/qr-scanner';
+@import "./scss/type";
+@import "./scss/layout";
+@import "./scss/transitions";
+@import "./scss/qr-scanner";
