--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,18 +4,18 @@
 
 // Color system
 
-$dfi-purple:  #5B10FF;
-$dfi-green:   #02B31B;
-$dfi-orange:  #FF9629;
-$dfi-red:     #FF0000;
-$dfi-scent:   #F4F3F6;
-$dfi-umbra:   #08091F;
+$dfi-purple: #5b10ff;
+$dfi-green: #02b31b;
+$dfi-orange: #ff9629;
+$dfi-red: #ff0000;
+$dfi-scent: #f4f3f6;
+$dfi-umbra: #08091f;
 
 $dfi-colors: (
-  "dfi-purple":   $dfi-purple,
-  "dfi-green":    $dfi-green,
-  "dfi-orange":   $dfi-orange,
-  "dfi-red":      $dfi-red,
-  "dfi-scent":    $dfi-scent,
-  "dfi-umbra":    $dfi-umbra
+  "dfi-purple": $dfi-purple,
+  "dfi-green": $dfi-green,
+  "dfi-orange": $dfi-orange,
+  "dfi-red": $dfi-red,
+  "dfi-scent": $dfi-scent,
+  "dfi-umbra": $dfi-umbra
 );
