--- a/src/components/KeyValueLi/KeyValueLi.module.scss
+++ b/src/components/KeyValueLi/KeyValueLi.module.scss
@@ -1,9 +1,9 @@
 // App and Bootstrap variables required
-@import '~bootstrap/scss/functions';
+@import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-@import '../../scss/variables';
-@import '../../scss/bootstrap/variables';
+@import "../../scss/variables";
+@import "../../scss/bootstrap/variables";
 
 .keyValueLi {
   display: flex;
@@ -34,7 +34,8 @@
 
 .copiedIndicator {
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   width: calc(100% - 32px);
   height: 100%;
   background-color: $dfi-scent;
