--- a/src/containers/BlockchainPage/BlockTxn.module.scss
+++ b/src/containers/BlockchainPage/BlockTxn.module.scss
@@ -1,9 +1,9 @@
 // App and Bootstrap variables required
-@import '~bootstrap/scss/functions';
+@import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-@import '../../scss/variables';
-@import '../../scss/bootstrap/variables';
+@import "../../scss/variables";
+@import "../../scss/bootstrap/variables";
 
 .txn {
   margin-bottom: 1.5rem;
@@ -17,7 +17,7 @@
   align-items: center;
   padding: $table-cell-padding-y $table-cell-padding-x $table-cell-padding-y 0;
   border-bottom: $table-border-width solid $table-border-color;
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.5rem;
 }
 
@@ -44,7 +44,8 @@
 
 .copiedIndicator {
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   width: calc(100% - 48px);
   height: 100%;
   background-color: $card-bg;
@@ -55,7 +56,7 @@
 .addresses {
   display: flex;
   align-items: center;
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.25rem;
   padding-top: $table-cell-padding-y / 2;
   padding-bottom: $table-cell-padding-y;
@@ -102,4 +103,3 @@
 .amount {
   color: $secondary;
 }
-
