--- a/src/containers/WalletPage/PaymentRequests.module.scss
+++ b/src/containers/WalletPage/PaymentRequests.module.scss
@@ -1,10 +1,9 @@
 // App and Bootstrap variables required
-@import '~bootstrap/scss/functions';
+@import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-@import '../../scss/variables';
-@import '../../scss/bootstrap/variables';
-
+@import "../../scss/variables";
+@import "../../scss/bootstrap/variables";
 
 .table {
   margin-bottom: 0;
@@ -31,7 +30,7 @@
 
 .amount {
   text-align: right;
-  letter-spacing: .44px;
+  letter-spacing: 0.44px;
 }
 
 .unit {
