--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -1,7 +1,7 @@
 .caption-secondary {
-  font-size: .75rem;
+  font-size: 0.75rem;
   font-weight: $font-weight-medium;
   line-height: 18px;
-  letter-spacing: .21px;
+  letter-spacing: 0.21px;
   color: $secondary;
 }
