MasterNode container restructured

--- a/webapp/src/containers/MasternodesPage/components/MasterNodesList/MasternodesList.module.scss
+++ b/webapp/src/containers/MasternodesPage/components/MasterNodesList/MasternodesList.module.scss
@@ -2,8 +2,8 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-@import "../../scss/variables";
-@import "../../scss/bootstrap/variables";
+@import "../../../../scss/variables";
+@import "../../../../scss/bootstrap/variables";
 
 .card {
   overflow: hidden;
