--- a/webapp/src/containers/BlockchainPage/components/BlockchainTable/BlockchainTable.module.scss
+++ b/webapp/src/containers/BlockchainPage/components/BlockchainTable/BlockchainTable.module.scss
@@ -1,9 +1,9 @@
 // App and Bootstrap variables required
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "../../scss/variables";
-@import "../../scss/bootstrap/variables";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '../../../../scss/variables';
+@import '../../../../scss/bootstrap/variables';
 
 .card {
   overflow: hidden;
