--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -32,7 +32,7 @@ body {
       flex-shrink: 0;
 
       &:before {
-        content: "";
+        content: '';
         position: absolute;
         width: 100%;
         height: 100%;
@@ -138,7 +138,7 @@ body {
     }
   }
 
-  [class^="txn-status-"] {
+  [class^='txn-status-'] {
     display: block;
     text-indent: 100%;
     white-space: nowrap;
