--- a/webapp/src/scss/_variables.scss
+++ b/webapp/src/scss/_variables.scss
@@ -12,10 +12,10 @@ $dfi-scent: #f4f3f6;
 $dfi-umbra: #08091f;
 
 $dfi-colors: (
-  "dfi-purple": $dfi-purple,
-  "dfi-green": $dfi-green,
-  "dfi-orange": $dfi-orange,
-  "dfi-red": $dfi-red,
-  "dfi-scent": $dfi-scent,
-  "dfi-umbra": $dfi-umbra
+  'dfi-purple': $dfi-purple,
+  'dfi-green': $dfi-green,
+  'dfi-orange': $dfi-orange,
+  'dfi-red': $dfi-red,
+  'dfi-scent': $dfi-scent,
+  'dfi-umbra': $dfi-umbra,
 );
