Sumit/code refactoring (#17)
* App folder restructured

* Wallet container restructured

* Settings container restructured

* MasterNode container restructured

* Errors ExchangePage and HelpPage container restructured

* File renaming

* Added const files for routes

* Added loglevel for logs

* BlockchainPage refactoring

* worked on SearchBar, Spinner, StatCard restructuring

* css issue fixed

* Launch screen implementation (#12)

* Readded semi in electron app

* Basic wallet ui/blockchain rpc status check (#14)

* Added blockchain rpc status check

* Added constant for blockchain status retry variable

* Updated constants for blockhain status retry and setTimeout

* Updated rpc methods

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

* Basic wallet ui/block sync progress (#13)

* Block sync progress with popover

* Changed saga initial call for sync status

* Block sync progress with popover

* Changed saga initial call for sync status

* Sync status reskin

* Added blockchain rpc status check (#16)

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

* Sync component css refactoring

* Reversed block status condition

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/containers/SyncStatus/SyncStatus.module.scss
+++ b/webapp/src/containers/SyncStatus/SyncStatus.module.scss
@@ -1,25 +1,39 @@
 // App and Bootstrap variables required
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "../../scss/variables";
-@import "../../scss/bootstrap/variables";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '../../scss/variables';
+@import '../../scss/bootstrap/variables';
 
-.syncStatus {
-  position: absolute;
-  top: 24px;
-  right: 32px;
-  font-size: 0.75rem;
-  font-weight: $font-weight-medium;
-  line-height: 24px;
-  letter-spacing: 0.21px;
-  color: $secondary;
-  z-index: $zindex-dropdown;
-
+.syncStatusWrapper {
+  background-color: $white;
+  border-top: 1px solid $gray-200;
+  height: 96px;
+  padding: 24px 32px;
+  .synchronizing {
+    color: $black;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.21px;
+    line-height: 16px;
+    text-align: left;
+  }
+  .blockStatus {
+    color: $gray-600;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.21px;
+    line-height: 16px;
+    text-align: left;
+  }
   svg {
-    width: 24px;
-    height: 24px;
-    margin-left: 8px;
+    width: 18px;
+    height: 18px;
+    margin-left: 2px;
     color: $green;
+  }
+  .customProgressBar {
+    margin-top: 5px;
+    height: 8px;
   }
 }
