sync progress widget restyle

--- a/webapp/src/app/App.scss
+++ b/webapp/src/app/App.scss
@@ -57,34 +57,34 @@
 // Customize Bootstrap as necessary
 // These files don't exist yet. To customize, copy from Bootstrap, edit, then uncomment.
 
-// @import './scss/bootstrap/root';
-// @import './scss/bootstrap/reboot';
+// @import '../scss/bootstrap/root';
+// @import '../scss/bootstrap/reboot';
 @import '../scss/bootstrap/type';
-// @import './scss/bootstrap/images';
-// @import './scss/bootstrap/containers';
-// @import './scss/bootstrap/grid';
+// @import '../scss/bootstrap/images';
+// @import '../scss/bootstrap/containers';
+// @import '../scss/bootstrap/grid';
 @import '../scss/bootstrap/tables';
 @import '../scss/bootstrap/forms';
 @import '../scss/bootstrap/buttons';
-// @import './scss/bootstrap/transitions';
+// @import '../scss/bootstrap/transitions';
 @import '../scss/bootstrap/dropdown';
-// @import './scss/bootstrap/button-group';
+// @import '../scss/bootstrap/button-group';
 @import '../scss/bootstrap/nav';
-// @import './scss/bootstrap/navbar';
+// @import '../scss/bootstrap/navbar';
 @import '../scss/bootstrap/card';
-// @import './scss/bootstrap/breadcrumb';
-// @import './scss/bootstrap/pagination';
-// @import './scss/bootstrap/badge';
-// @import './scss/bootstrap/alert';
-// @import './scss/bootstrap/progress';
-// @import './scss/bootstrap/list-group';
-// @import './scss/bootstrap/close';
-// @import './scss/bootstrap/toasts';
-// @import './scss/bootstrap/modal';
-// @import './scss/bootstrap/tooltip';
-// @import './scss/bootstrap/popover';
-// @import './scss/bootstrap/carousel';
-// @import './scss/bootstrap/spinners';
+// @import '../scss/bootstrap/breadcrumb';
+// @import '../scss/bootstrap/pagination';
+// @import '../scss/bootstrap/badge';
+// @import '../scss/bootstrap/alert';
+@import '../scss/bootstrap/progress';
+// @import '../scss/bootstrap/list-group';
+// @import '../scss/bootstrap/close';
+// @import '../scss/bootstrap/toasts';
+// @import '../scss/bootstrap/modal';
+// @import '../scss/bootstrap/tooltip';
+// @import '../scss/bootstrap/popover';
+// @import '../scss/bootstrap/carousel';
+// @import '../scss/bootstrap/spinners';
 
 //
 // Unofficial bootstrap compoennts and mods
