Added refresh functionality for wallet and pending balance

--- a/webapp/src/components/StatCard/StatCard.module.scss
+++ b/webapp/src/components/StatCard/StatCard.module.scss
@@ -10,7 +10,7 @@
 }
 
 .cardBody {
-  display: flex;
+  display: inline-block;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
